# LearnDeep

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildcommand.sh  buildcommand.txt  makefile
.github/workflows/: ci.yml
api/: CMakeLists.txt  C_API.h  tensor.cpp  tensor.h
core/: CMakeLists.txt
core/Activations/: Activations.cu
core/Forward_Propagation/: BatchNormalization_Propagation.cu
core/LAS/: CMakeLists.txt  CPULibrary.cpp  CPULibrary.h  GPULibrary.cu  avx2_micro_kernels.cpp  avx2_micro_kernels.h  gpu_interface.cu  gpu_interface.cuh  gpu_interface.h  gpu_micro_kernels.cu  gpu_micro_kernels.cuh
core/framework/: CMakeLists.txt  MathLibrary.cpp  MathLibrary.h  NDynamicArray.cpp  NDynamicArray.h  log_config.hpp  type.h
core/graph/: CMakeLists.txt  graph.cpp  graph.h  graph_context.hpp  graph_framework.cpp  graph_framework.hpp  graph_manager.cpp  graph_manager.hpp  graph_node.cpp  graph_node.hpp
core/kernel/: CMakeLists.txt  Opskernel.cpp  add.cpp  matmul.cpp  mul.cpp  opskernel.cpp  opskernel.h  opsname.h  power.cpp  reducesum.cpp  relu.cpp  scale.cpp  sigmoid.cpp  softmax.cpp  sqrt.cpp  sub.cpp  transpose.cpp
core/models/: Model.h
include/: Activations.h  CPULibrary.h  CPU_aux.h  DeepLearning.h  Forward_Propagation.h  GPULibrary.h  GPU_aux.h  Graph.h  Layers.h  Losses.h  MathLibrary.h  Metrics.h  NDynamicArray.h  Opskernel.h  OptimizationType.h  Optimizers.h
io/: DLearning.csv  function_hyperparameter_configuration.txt
lib/Forward_Propagation/: Dense_Forward.cu
lib/Layers/: BatchNormalization.cu  Dense.cu  Layers.cu
lib/Losses/: Losses.cu
lib/Math/: CPULibrary.cpp  GPULibrary.cu  MathLibrary.cpp  MathLibrary.cu  MathLibrary_v01.cpp  NDynamicArray.cpp  NDynamicArray_v02.cpp
lib/Metrics/: Metrics.cu
lib/Models/: Model.cu
lib/Optimizers/: OptimiserBatchNormalization.cu  OptimiserDense.cu  OptimizationType.cu
performance/: transpose.csv
src/: DLearning.cu  DeepLearning_02.cu  Linear_Algebra.cpp  bal.cpp  sum.cu  test.cu  variable_length_arg.cpp
test/: CMakeLists.txt  Linear_Algebra.cpp  data_type_test.cpp  graph_test.cpp  matrix_kernel.cu
test/benchmark/: addition.benchmark.cpp  main.benchmark.cpp  matmul.benchmark.cpp  mean.benchmark.cpp  multiplication.benchmark.cpp  power.benchmark.cpp  reducesum.benchmark.cpp  scale.benchmark.cpp  sigmoid.benchmark.cpp  sqrt.benchmark.cpp  transpose.benchmark.cpp
test/unit/: LinearAlgebraFixtures.unit.cpp  LinearAlgebraFixtures.unit.hpp  addition.unit.cpp  gemm.unit.cpp  graph.unit.cpp  main.cpp  matmul.unit.cpp  mean.unit.cpp  multiplication.unit.cpp  power.unit.cpp  reducesum.unit.cpp  relu.unit.cpp  scale.unit.cpp  sigmoid.unit.cpp  softmax.unit.cpp  sqrt.unit.cpp  sub.unit.cpp  tensor.unit.cpp  transpose.unit.cpp
